[gd_scene load_steps=42 format=2]

[ext_resource path="res://Scenes/Neo K9 Hood Designer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Neoprene K9 Form.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fonts/Barlow/Barlow-SemiBold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Textures/bars.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Main.gd" type="Script" id=5]
[ext_resource path="res://Textures/Cart.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Leather K9 Hood Designer.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/Hood Style Selector.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Neo Woof Hood Designer.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Neo Puppy Hood Designer.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Neo Frisky Hood Designer.tscn" type="PackedScene" id=11]
[ext_resource path="res://Fonts/Barlow/Barlow-Medium.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://Scenes/Leather K9 Form.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scripts/Form Tab Viewport.gd" type="Script" id=14]
[ext_resource path="res://Scenes/Neoprene Woof Form.tscn" type="PackedScene" id=15]
[ext_resource path="res://Scenes/Neoprene Frisky Form.tscn" type="PackedScene" id=16]
[ext_resource path="res://Scenes/Neoprene Puppy Form.tscn" type="PackedScene" id=17]
[ext_resource path="res://Scenes/Neoprene Muzzle Form.tscn" type="PackedScene" id=18]
[ext_resource path="res://Scenes/Neo Muzzle Designer.tscn" type="PackedScene" id=19]
[ext_resource path="res://Scripts/Hood Code In Out.gd" type="Script" id=20]
[ext_resource path="res://Fonts/hack/Hack-Regular.ttf" type="DynamicFontData" id=21]
[ext_resource path="res://Materials/Hood selector Buttons.tres" type="Theme" id=22]
[ext_resource path="res://Assets/Form Export Dialog.tscn" type="PackedScene" id=23]
[ext_resource path="res://Assets/Form Cam Scaler.gd" type="Script" id=27]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0980392, 0.0941176, 0.121569, 1 )

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=10]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color( 0.92549, 0.215686, 0.235294, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxEmpty" id=6]
content_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=12]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
anti_aliasing = false

[sub_resource type="ButtonGroup" id=62]

[sub_resource type="StyleBoxFlat" id=88]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.0980392, 0.0941176, 0.121569, 1 )

[sub_resource type="DynamicFont" id=89]
size = 18
font_data = ExtResource( 21 )

[sub_resource type="StyleBoxFlat" id=87]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id=86]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0 )
border_width_bottom = 4
border_color = Color( 0.92549, 0.215686, 0.235294, 1 )

[sub_resource type="ButtonGroup" id=7]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="DynamicFont" id=84]
size = 61
extra_spacing_top = 1
extra_spacing_bottom = -1
font_data = ExtResource( 12 )

[sub_resource type="StyleBoxEmpty" id=85]

[sub_resource type="DynamicFont" id=169]
font_data = ExtResource( 12 )

[node name="ColorRect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="Control" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="PanelContainer" parent="Control"]
margin_right = 4400.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
custom_styles/panel = SubResource( 1 )

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/HBoxContainer"]
margin_right = 4400.0
margin_bottom = 50.0

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/HBoxContainer/HBoxContainer2"]
margin_right = 1464.0
margin_bottom = 50.0
size_flags_horizontal = 3
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Control/HBoxContainer/HBoxContainer2/HBoxContainer2"]
margin_left = 663.0
margin_right = 800.0
margin_bottom = 50.0
custom_constants/margin_top = 4
custom_constants/margin_bottom = 4

[node name="MenuButton" type="Button" parent="Control/HBoxContainer/HBoxContainer2/HBoxContainer2/MarginContainer"]
margin_top = 4.0
margin_right = 137.0
margin_bottom = 46.0
rect_min_size = Vector2( 137, 0 )
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 22 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 10 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 9 )
toggle_mode = true
enabled_focus_mode = 0
text = "HOOD STYLE"
icon = ExtResource( 4 )
expand_icon = true
script = ExtResource( 8 )

[node name="Popup" type="Popup" parent="Control/HBoxContainer/HBoxContainer2/HBoxContainer2/MarginContainer/MenuButton"]
visible = true
margin_right = 495.0
margin_bottom = 347.0
theme = ExtResource( 22 )

[node name="PanelContainer" type="PanelContainer" parent="Control/HBoxContainer/HBoxContainer2/HBoxContainer2/MarginContainer/MenuButton/Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 2.0
margin_bottom = -5.0
rect_min_size = Vector2( 500, 0 )
custom_styles/panel = SubResource( 12 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer/HBoxContainer2/HBoxContainer2/MarginContainer/MenuButton/Popup/PanelContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 490.0
margin_bottom = 340.0

[node name="Neoprene Frisky Hood" type="Button" parent="Control/HBoxContainer/HBoxContainer2/HBoxContainer2/MarginContainer/MenuButton/Popup/PanelContainer/VBoxContainer"]
margin_right = 480.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 25 )
toggle_mode = true
group = SubResource( 62 )
text = "Neoprene Frisky Hood"
expand_icon = true

[node name="Neoprene K9 Hood" type="Button" parent="Control/HBoxContainer/HBoxContainer2/HBoxContainer2/MarginContainer/MenuButton/Popup/PanelContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 480.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 25 )
toggle_mode = true
pressed = true
group = SubResource( 62 )
text = "Neoprene K9 Hood"
expand_icon = true

[node name="Neoprene Puppy Hood" type="Button" parent="Control/HBoxContainer/HBoxContainer2/HBoxContainer2/MarginContainer/MenuButton/Popup/PanelContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 480.0
margin_bottom = 98.0
rect_min_size = Vector2( 0, 25 )
toggle_mode = true
group = SubResource( 62 )
text = "Neoprene Puppy Hood"
expand_icon = true

[node name="Neoprene Woof Hood" type="Button" parent="Control/HBoxContainer/HBoxContainer2/HBoxContainer2/MarginContainer/MenuButton/Popup/PanelContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 480.0
margin_bottom = 132.0
rect_min_size = Vector2( 0, 25 )
toggle_mode = true
group = SubResource( 62 )
text = "Neoprene Woof Hood"
expand_icon = true

[node name="Separator" type="HSeparator" parent="Control/HBoxContainer/HBoxContainer2/HBoxContainer2/MarginContainer/MenuButton/Popup/PanelContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 480.0
margin_bottom = 161.0
rect_min_size = Vector2( 0, 25 )

[node name="Neoprene Muzzle" type="Button" parent="Control/HBoxContainer/HBoxContainer2/HBoxContainer2/MarginContainer/MenuButton/Popup/PanelContainer/VBoxContainer"]
margin_top = 165.0
margin_right = 480.0
margin_bottom = 195.0
rect_min_size = Vector2( 0, 25 )
toggle_mode = true
group = SubResource( 62 )
text = "Neoprene Muzzle"
expand_icon = true

[node name="Separator2" type="HSeparator" parent="Control/HBoxContainer/HBoxContainer2/HBoxContainer2/MarginContainer/MenuButton/Popup/PanelContainer/VBoxContainer"]
margin_top = 199.0
margin_right = 480.0
margin_bottom = 224.0
rect_min_size = Vector2( 0, 25 )

[node name="Leather K9 Hood" type="Button" parent="Control/HBoxContainer/HBoxContainer2/HBoxContainer2/MarginContainer/MenuButton/Popup/PanelContainer/VBoxContainer"]
margin_top = 228.0
margin_right = 480.0
margin_bottom = 258.0
rect_min_size = Vector2( 0, 25 )
toggle_mode = true
group = SubResource( 62 )
text = "Leather K9 Hood"
expand_icon = true

[node name="Separator3" type="HSeparator" parent="Control/HBoxContainer/HBoxContainer2/HBoxContainer2/MarginContainer/MenuButton/Popup/PanelContainer/VBoxContainer"]
margin_top = 262.0
margin_right = 480.0
margin_bottom = 287.0
rect_min_size = Vector2( 0, 25 )

[node name="HBoxContainer2" type="PanelContainer" parent="Control/HBoxContainer/HBoxContainer2/HBoxContainer2/MarginContainer/MenuButton/Popup/PanelContainer/VBoxContainer"]
margin_top = 291.0
margin_right = 480.0
margin_bottom = 330.0
mouse_filter = 1
size_flags_horizontal = 3
custom_styles/panel = SubResource( 88 )

[node name="CenterContainer" type="CenterContainer" parent="Control/HBoxContainer/HBoxContainer2/HBoxContainer2/MarginContainer/MenuButton/Popup/PanelContainer/VBoxContainer/HBoxContainer2"]
margin_left = 4.0
margin_top = 4.0
margin_right = 476.0
margin_bottom = 35.0
mouse_filter = 1

[node name="LineEdit" type="LineEdit" parent="Control/HBoxContainer/HBoxContainer2/HBoxContainer2/MarginContainer/MenuButton/Popup/PanelContainer/VBoxContainer/HBoxContainer2/CenterContainer" groups=["output code"]]
margin_left = 129.0
margin_right = 342.867
margin_bottom = 31.0
rect_min_size = Vector2( 213.867, 30 )
mouse_filter = 1
input_pass_on_modal_close_click = false
custom_colors/selection_color = Color( 0.564706, 0.886275, 1, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.737255, 0.737255, 0.737255, 1 )
custom_fonts/font = SubResource( 89 )
custom_styles/read_only = SubResource( 87 )
custom_styles/focus = SubResource( 86 )
custom_styles/normal = SubResource( 87 )
text = "dHiBaOXb1aRF4aA80"
max_length = 17
context_menu_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
script = ExtResource( 20 )

[node name="HBoxContainer" type="HBoxContainer" parent="Control/HBoxContainer/HBoxContainer2"]
margin_left = 1468.0
margin_right = 2932.0
margin_bottom = 50.0
size_flags_horizontal = 3
custom_constants/separation = 0
alignment = 1

[node name="Full Hood Render" type="Button" parent="Control/HBoxContainer/HBoxContainer2/HBoxContainer"]
margin_left = 557.0
margin_right = 692.0
margin_bottom = 50.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.92549, 0.215686, 0.235294, 1 )
custom_colors/font_color_pressed = Color( 0.92549, 0.215686, 0.235294, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
toggle_mode = true
pressed = true
enabled_focus_mode = 0
group = SubResource( 7 )
text = "Full Hood Render"

[node name="Control" type="Control" parent="Control/HBoxContainer/HBoxContainer2/HBoxContainer"]
margin_left = 692.0
margin_right = 702.0
margin_bottom = 50.0
rect_min_size = Vector2( 10, 0 )

[node name="Interactive ordering form" type="Button" parent="Control/HBoxContainer/HBoxContainer2/HBoxContainer"]
margin_left = 702.0
margin_right = 907.0
margin_bottom = 50.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.92549, 0.215686, 0.235294, 1 )
custom_colors/font_color_pressed = Color( 0.92549, 0.215686, 0.235294, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
toggle_mode = true
enabled_focus_mode = 0
group = SubResource( 7 )
text = "Interactive ordering form"

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/HBoxContainer/HBoxContainer2"]
margin_left = 2936.0
margin_right = 4400.0
margin_bottom = 50.0
size_flags_horizontal = 3
custom_constants/separation = 0
alignment = 1

[node name="Button" type="Button" parent="Control/HBoxContainer/HBoxContainer2/HBoxContainer3"]
margin_left = 628.0
margin_right = 768.0
margin_bottom = 50.0
rect_min_size = Vector2( 140, 0 )
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.92549, 0.215686, 0.235294, 1 )
custom_colors/font_color_pressed = Color( 0.92549, 0.215686, 0.235294, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 11 )
custom_styles/normal = SubResource( 11 )
text = "EXPORT FORM"
icon = ExtResource( 6 )
expand_icon = true

[node name="Export Dialog" parent="Control/HBoxContainer/HBoxContainer2/HBoxContainer3/Button" instance=ExtResource( 23 )]
margin_right = 460.0
margin_bottom = 350.0

[node name="Control" type="Control" parent="Control/HBoxContainer/HBoxContainer2/HBoxContainer3"]
margin_left = 768.0
margin_right = 778.0
margin_bottom = 50.0
rect_min_size = Vector2( 10, 0 )

[node name="Price" type="Label" parent="Control/HBoxContainer/HBoxContainer2/HBoxContainer3" groups=["Price"]]
margin_left = 778.0
margin_top = 14.0
margin_right = 836.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
text = "$179.95"

[node name="MarginContainer" type="MarginContainer" parent="Control"]
margin_top = 54.0
margin_right = 4400.0
margin_bottom = 3376.0
size_flags_vertical = 3

[node name="Form Tab" type="ViewportContainer" parent="Control/MarginContainer" groups=["Form Tab"]]
visible = false
margin_right = 4400.0
margin_bottom = 3322.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport" type="Viewport" parent="Control/MarginContainer/Form Tab" groups=["Form"]]
size = Vector2( 4400, 3322 )
transparent_bg = true
handle_input_locally = false
hdr = false
disable_3d = true
usage = 0
render_target_update_mode = 0
physics_object_picking = true
script = ExtResource( 14 )
Menu_bar_path = NodePath("../../../HBoxContainer")

[node name="Visibility" type="Control" parent="Control/MarginContainer/Form Tab/Viewport" groups=["Form Tab"]]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Camera2D" type="Camera2D" parent="Control/MarginContainer/Form Tab/Viewport/Visibility"]
anchor_mode = 0
current = true
zoom = Vector2( 1, 5 )
script = ExtResource( 27 )

[node name="Neoprene Frisky Form" parent="Control/MarginContainer/Form Tab/Viewport/Visibility" groups=["Neoprene Frisky Hood"] instance=ExtResource( 16 )]
visible = false

[node name="Neoprene K9 Form" parent="Control/MarginContainer/Form Tab/Viewport/Visibility" groups=["Neoprene K9 Hood"] instance=ExtResource( 2 )]

[node name="Neoprene Puppy Form" parent="Control/MarginContainer/Form Tab/Viewport/Visibility" groups=["Neoprene Puppy Hood"] instance=ExtResource( 17 )]
visible = false

[node name="Neoprene Woof Form" parent="Control/MarginContainer/Form Tab/Viewport/Visibility" groups=["Neoprene Woof Hood"] instance=ExtResource( 15 )]
visible = false

[node name="Neoprene Muzzle Form" parent="Control/MarginContainer/Form Tab/Viewport/Visibility" groups=["Neoprene Muzzle"] instance=ExtResource( 18 )]
visible = false

[node name="Leather K9 Form" parent="Control/MarginContainer/Form Tab/Viewport/Visibility" groups=["Leather K9 Hood"] instance=ExtResource( 13 )]
visible = false

[node name="Customer info" type="Node2D" parent="Control/MarginContainer/Form Tab/Viewport/Visibility"]

[node name="Control2" type="Control" parent="Control/MarginContainer/Form Tab/Viewport/Visibility/Customer info"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 4400.0
margin_bottom = 3400.0
rect_min_size = Vector2( 4400, 3400 )
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="Control/MarginContainer/Form Tab/Viewport/Visibility/Customer info/Control2"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LineEdit" type="LineEdit" parent="Control/MarginContainer/Form Tab/Viewport/Visibility/Customer info/Control2"]
margin_left = 2286.0
margin_top = 175.0
margin_right = 3238.0
margin_bottom = 252.0
size_flags_horizontal = 3
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 84 )
custom_styles/read_only = SubResource( 85 )
custom_styles/focus = SubResource( 85 )
custom_styles/normal = SubResource( 85 )
placeholder_text = "Name here"
placeholder_alpha = 0.1
caret_blink = true

[node name="LineEdit2" type="LineEdit" parent="Control/MarginContainer/Form Tab/Viewport/Visibility/Customer info/Control2"]
margin_left = 2286.0
margin_top = 285.0
margin_right = 3238.0
margin_bottom = 362.0
size_flags_horizontal = 3
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 84 )
custom_styles/read_only = SubResource( 85 )
custom_styles/focus = SubResource( 85 )
custom_styles/normal = SubResource( 85 )
placeholder_text = "Email here"
placeholder_alpha = 0.1

[node name="LineEdit3" type="LineEdit" parent="Control/MarginContainer/Form Tab/Viewport/Visibility/Customer info/Control2"]
margin_left = 2286.0
margin_top = 397.0
margin_right = 3238.0
margin_bottom = 474.0
size_flags_horizontal = 3
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 84 )
custom_styles/read_only = SubResource( 85 )
custom_styles/focus = SubResource( 85 )
custom_styles/normal = SubResource( 85 )
placeholder_text = "Phone here"
placeholder_alpha = 0.1

[node name="Designer Tab" type="Control" parent="Control/MarginContainer" groups=["Designer Tab"]]
margin_right = 4400.0
margin_bottom = 3322.0

[node name="Neoprene Frisky" parent="Control/MarginContainer/Designer Tab" groups=["Neoprene Frisky Hood"] instance=ExtResource( 11 )]
visible = false

[node name="Neoprene K9" parent="Control/MarginContainer/Designer Tab" groups=["Neoprene K9 Hood"] instance=ExtResource( 1 )]

[node name="Neoprene Puppy" parent="Control/MarginContainer/Designer Tab" groups=["Neoprene Puppy Hood"] instance=ExtResource( 10 )]
visible = false

[node name="Neoprene Woof" parent="Control/MarginContainer/Designer Tab" groups=["Neoprene Woof Hood"] instance=ExtResource( 9 )]
visible = false

[node name="Neoprene Muzzle" parent="Control/MarginContainer/Designer Tab" groups=["Neoprene Muzzle"] instance=ExtResource( 19 )]
visible = false

[node name="Leather K9" parent="Control/MarginContainer/Designer Tab" groups=["Leather K9 Hood"] instance=ExtResource( 7 )]
visible = false

[node name="Label" type="Label" parent="Control"]
margin_top = 3380.0
margin_right = 4400.0
margin_bottom = 3400.0
custom_fonts/font = SubResource( 169 )
text = "As the creator of this program I am not affiliated with MR S LEATHER"

[connection signal="toggled" from="Control/HBoxContainer/HBoxContainer2/HBoxContainer2/MarginContainer/MenuButton" to="Control/HBoxContainer/HBoxContainer2/HBoxContainer2/MarginContainer/MenuButton" method="_on_MenuButton_toggled"]
[connection signal="gui_input" from="Control/HBoxContainer/HBoxContainer2/HBoxContainer2/MarginContainer/MenuButton/Popup" to="Control/HBoxContainer/HBoxContainer2/HBoxContainer2/MarginContainer/MenuButton" method="_on_Popup_gui_input"]
[connection signal="popup_hide" from="Control/HBoxContainer/HBoxContainer2/HBoxContainer2/MarginContainer/MenuButton/Popup" to="Control/HBoxContainer/HBoxContainer2/HBoxContainer2/MarginContainer/MenuButton" method="_on_Popup_visibility_changed"]
[connection signal="pressed" from="Control/HBoxContainer/HBoxContainer2/HBoxContainer2/MarginContainer/MenuButton/Popup/PanelContainer/VBoxContainer/Neoprene Frisky Hood" to="Control/HBoxContainer/HBoxContainer2/HBoxContainer2/MarginContainer/MenuButton" method="_hood_style_selected" binds= [ 0 ]]
[connection signal="pressed" from="Control/HBoxContainer/HBoxContainer2/HBoxContainer2/MarginContainer/MenuButton/Popup/PanelContainer/VBoxContainer/Neoprene K9 Hood" to="Control/HBoxContainer/HBoxContainer2/HBoxContainer2/MarginContainer/MenuButton" method="_hood_style_selected" binds= [ 1 ]]
[connection signal="pressed" from="Control/HBoxContainer/HBoxContainer2/HBoxContainer2/MarginContainer/MenuButton/Popup/PanelContainer/VBoxContainer/Neoprene Puppy Hood" to="Control/HBoxContainer/HBoxContainer2/HBoxContainer2/MarginContainer/MenuButton" method="_hood_style_selected" binds= [ 2 ]]
[connection signal="pressed" from="Control/HBoxContainer/HBoxContainer2/HBoxContainer2/MarginContainer/MenuButton/Popup/PanelContainer/VBoxContainer/Neoprene Woof Hood" to="Control/HBoxContainer/HBoxContainer2/HBoxContainer2/MarginContainer/MenuButton" method="_hood_style_selected" binds= [ 3 ]]
[connection signal="pressed" from="Control/HBoxContainer/HBoxContainer2/HBoxContainer2/MarginContainer/MenuButton/Popup/PanelContainer/VBoxContainer/Neoprene Muzzle" to="Control/HBoxContainer/HBoxContainer2/HBoxContainer2/MarginContainer/MenuButton" method="_hood_style_selected" binds= [ 4 ]]
[connection signal="pressed" from="Control/HBoxContainer/HBoxContainer2/HBoxContainer2/MarginContainer/MenuButton/Popup/PanelContainer/VBoxContainer/Leather K9 Hood" to="Control/HBoxContainer/HBoxContainer2/HBoxContainer2/MarginContainer/MenuButton" method="_hood_style_selected" binds= [ 5 ]]
[connection signal="text_entered" from="Control/HBoxContainer/HBoxContainer2/HBoxContainer2/MarginContainer/MenuButton/Popup/PanelContainer/VBoxContainer/HBoxContainer2/CenterContainer/LineEdit" to="Control/HBoxContainer/HBoxContainer2/HBoxContainer2/MarginContainer/MenuButton/Popup/PanelContainer/VBoxContainer/HBoxContainer2/CenterContainer/LineEdit" method="_on_code_entered"]
[connection signal="toggled" from="Control/HBoxContainer/HBoxContainer2/HBoxContainer/Full Hood Render" to="." method="_on_Full_Hood_Render_toggled"]
[connection signal="toggled" from="Control/HBoxContainer/HBoxContainer2/HBoxContainer/Interactive ordering form" to="." method="_on_Interactive_ordering_form_toggled"]
[connection signal="pressed" from="Control/HBoxContainer/HBoxContainer2/HBoxContainer3/Button" to="Control/HBoxContainer/HBoxContainer2/HBoxContainer3/Button/Export Dialog" method="_popup"]
[connection signal="popup_hide" from="Control/HBoxContainer/HBoxContainer2/HBoxContainer3/Button/Export Dialog" to="Control/HBoxContainer/HBoxContainer2/HBoxContainer3/Button/Export Dialog" method="_on_Export_Dialog_popup_hide"]
[connection signal="draw" from="Control/MarginContainer/Form Tab/Viewport/Visibility" to="Control/MarginContainer/Form Tab/Viewport/Visibility/Camera2D" method="_readjust_camera_twice_to_fix_slight_bug"]
